# 145-attention-rollout-trading

./: README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
python/: __init__.py  attention_rollout.py  backtest.py  data_loader.py  model.py  requirements.txt  visualization.py
python/notebooks/: 01_attention_rollout_trading.ipynb
rust/: Cargo.toml  README.md
rust/examples/: trading_example.rs
rust/src/: lib.rs
