[package]
name = "attention_rollout_trading"
version = "0.1.0"
edition = "2021"
description = "Attention Rollout for interpretable trading models"
license = "MIT"
authors = ["ML Trading Team"]

[dependencies]
ndarray = "0.15"
ndarray-stats = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

[[example]]
name = "trading_example"
path = "examples/trading_example.rs"

[dev-dependencies]
approx = "0.5"
